# dev-gtm-claude-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  skills.sh.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: seo-backlinks.md  seo-dataforseo.md  seo-ecommerce.md  seo-flow.md  seo-image-gen.md
.claude/commands/: coding-skills.md  dev-gtm.md  job-search.md  marketing.md  notion.md  pm.md  product-designers.md  web-design.md
.claude/extensions/ahrefs/: install.ps1  install.sh
.claude/extensions/ahrefs/docs/: AHREFS-SETUP.md
.claude/extensions/banana/: README.md
.claude/extensions/banana/agents/: seo-image-gen.md
.claude/extensions/bing-webmaster/: install.ps1
.claude/extensions/dataforseo/: install.sh
.claude/extensions/firecrawl/: README.md  install.ps1
.claude/extensions/profound/: install.ps1  install.sh
.claude/extensions/seranking/: install.ps1  install.sh
.claude/extensions/unlighthouse/: install.ps1
.claude/scripts/: blog_render.py  cognitive_load.py  commoncrawl_graph.py  discourse_research.py  drift_baseline.py  drift_compare.py  drift_report.py  gbp_deprecation_lint.py  generate_hero.py  google_auth.py  iptc_ai_label.py  lcp_subparts.py  release_sign.py  render_page.py  sync_flow_seo.py  ucp_check.py  unlighthouse_run.py  url_safety.py  verify_release.py
.claude/skills/brief-outline-generator-v2/: SKILL.md
.claude/skills/content-brief/scripts/: brief_validator.py  text_parser.py
.claude/skills/dead-end-pages-interlinking-opportunities/: SKILL.md
.claude/skills/meeting-notes/: SKILL.md
.claude/skills/prd-development/: SKILL.md
.claude/skills/seo-maps/: SKILL.md
.claude/skills/site-architecture/: SKILL.md
agents/: blog-writer.md  seo-google.md
assets/: infrasity_logo.avif
brief-outline-generator/: SKILL.md
brief-outline-generator/scripts/: domain-analyzer.py
marketing-skills/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
marketing-skills-plugin/: .mcp.json
marketing-skills-plugin/skills/revops/: SKILL.md
marketing-skills-plugin/skills/sales-enablement/: SKILL.md
marketing-skills/lead-magnets/: SKILL.md
plugins/marketing-skills/: .mcp.json  README.md  install.ps1  install.sh  uninstall.sh
plugins/marketing-skills/.claude-plugin/: plugin.json
plugins/marketing-skills/skills/programmatic-seo/: SKILL.md
plugins/writing-skills/: README.md  install.ps1  install.sh  requirements.txt  uninstall.sh
plugins/writing-skills/.claude-plugin/: plugin.json
plugins/writing-skills/agents/: blog-reviewer.md
plugins/writing-skills/skills/reddit-comments/: SKILL.md
scripts/: analyze_blog.py  analyze_visual.py  backlinks_auth.py  blog_preflight.py  claude-blog-install.sh  codex-install.sh  content_humanize.py  content_quality.py  convert.sh  dataforseo_costs.py  dataforseo_normalize.py  drift_baseline.py  gemini-install.sh  generate_hero.py  google_auth.py  google_report.py  install.sh  keyword_planner.py  moz_api.py  openclaw-install.sh  portability_check.py  schema_generate.py  sync-codex-skills.py  sync-gemini-skills.py  sync-hermes-skills.py  sync-vibe-skills.py  sync_flow.py  vibe-install.sh
seo-skills/: pyproject.toml
seo-skills/.claude-plugin/: plugin.json
seo-skills/extensions/banana/: install.sh
seo-skills/extensions/bing-webmaster/: install.sh
seo-skills/extensions/bing-webmaster/docs/: BING-WEBMASTER-SETUP.md
seo-skills/extensions/dataforseo/: README.md  install.ps1  install.sh
seo-skills/extensions/dataforseo/agents/: seo-dataforseo.md
seo-skills/extensions/firecrawl/: install.sh
seo-skills/extensions/unlighthouse/: install.sh
seo-skills/geo-optimizer/: SKILL.md
seo-skills/keyword-clustering/: SKILL.md
skills/analytics-report/: SKILL.md
skills/api-docs-quality-report/: SKILL.md
skills/api-docs-quality-report/references/: scoring-rules.md
skills/blog-post-counter/: SKILL.md
skills/brief-outline-generator-v2/: README.md  SKILL.md
skills/brief-outline-generator-v2/references/: section-rules.md
skills/brief-outline-generator-v2/scripts/: domain-analyzer.py  generate-brief.py
skills/dev-marketing-prospector/: README.md
skills/dev-marketing-prospector/references/: output-format.md  vertical-definitions.md
skills/doc-metadata-analyzer/: .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  check_metadata.py  pyproject.toml  requirements.txt  test_mcp_server.py
skills/doc-metadata-analyzer/scripts/: __init__.py  checker.py  constants.py
skills/doc-metadata-analyzer/src/doc_metadata_analyzer/: __init__.py  checker.py  constants.py  models.py  server.py
skills/doc-metadata-analyzer/tests/: conftest.py  test_mcp_server.py
skills/docs-auditor/: README.md  SKILL.md
skills/docx-to-md/: README.md  requirements.txt
skills/docx-to-md/src/docx_to_md/: __init__.py  dom.py  errors.py
skills/docx-to-md/src/docx_to_md/handlers/format/: __init__.py
skills/growth-report/: SKILL.md
skills/growth-report/references/: html-template.md
skills/llms-txt-checker/: README.md  SKILL.md
skills/no-outlinks-audit/: README.md  SKILL.md
skills/no-outlinks-audit/references/: report-style-reference.html
skills/orphan-pages-internal-linking-opportunities/: README.md  SKILL.md
skills/orphan-pages-internal-linking-opportunities/references/: report-style-reference.html
skills/sdk-docs-auditor/: README.md  SKILL.md
skills/sdk-docs-auditor/assets/: report-template.html
src/docx_to_md/: utils.py
src/docx_to_md/handlers/: __init__.py
src/docx_to_md/handlers/parse/: __init__.py
tests/: __init__.py
tests/property/: __init__.py  test_formatting_properties.py
tools/: REGISTRY.md
tools/clis/: README.md
web-design/site-architecture/: SKILL.md
writing-skills/reddit-comments/: SKILL.md
