[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-metadata-analyzer"
version = "1.0.0"
description = "Python agent skill for checking documentation metadata and SEO compliance"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "MCP Skills Contributors"}
]
keywords = ["agent-skill", "documentation", "seo", "metadata", "ai-agent", "claude", "kiro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/yourusername/doc-metadata-analyzer"
Documentation = "https://github.com/yourusername/doc-metadata-analyzer#readme"
Repository = "https://github.com/yourusername/doc-metadata-analyzer"
Issues = "https://github.com/yourusername/doc-metadata-analyzer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
